--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           to help you make any room feel complete.
         </p>
       </div>
+     <div class="relative"> 
       <div class="section-three" id="thirdSection">
         <div class="left">
           <img src="/images/avatar-michelle.jpg" alt="avatar of michelle">
@@ -48,6 +49,15 @@
 
       </div>
 
+      <div class="poppedup" id="popped"> 
+          <p>SHARE</p>
+            <div class="social-icons">
+              <img src="./images/icon-facebook.svg">
+              <img src="./images/icon-twitter.svg">
+              <img src="./images/icon-pinterest.svg">  
+            </div>
+        </div>
+      </div>
       <div class="share" id="shareSection">
         <div class="left-icons">
           <p>SHARE</p>
