--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      <div class="relative"> 
       <div class="section-three" id="thirdSection">
         <div class="left">
-          <img src="https://github.com/Igho-Okeoghene/article-preview-component/blob/main/images/avatar-michelle.jpg" alt="avatar of michelle">
+          <img src="https://Igho-Okeoghene.github.io/article-preview-component/blob/main/images/avatar-michelle.jpg" alt="avatar of michelle">
             
           <div class="michelle-details">
               <h4>Michelle Appleton</h4>
